# libvirt-ipmi

./: .dockerignore  .gitignore  README.md  __init__.py  libvirtipmi.py  pyproject.toml  renovate.json  requirements.txt  test.Dockerfile  test.py
contrib/ansible-pull/: cloud-init.yaml  playbook.yml
